--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
                 <h2><span>Mark Daniel Morando</span></h2>
                 <h1 class="typing-text">I'm a <span></span></h1>
                 <p>
-                    currently a 4th year College student, studying BS Information Technology
-                    at Trimex Colleges Biñan. I am a fast learner and has a strong sense of passion
-                    in terms of technology. I am confident that I can grasp new concepts. I am
-                    willing to learn and enhance my skills and knowledge.
+                    I am a graduate of Bachelor of Science in Information Technology from Trimex Colleges Biñan.  
+                    I am confident in my ability to grasp new concepts quickly 
+                    and am always eager to learn and enhance my skills and knowledge.
+                    I am a fast learner with a strong passion for technology.
                 </p>
                 <div class="social-links">
                     <a href="https://linkedin.com/in/mark-daniel-morando-77667a346" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn Profile">
@@ -86,4 +86,5 @@
     </script>
 </body>
 </html> 
+
 
